# rust_dsp

./: .gitignore  .gitmodules  Cargo.toml  README.md  lib.rs
bench/: Cargo.toml
buffer/: Cargo.toml
delay/: Cargo.toml
dsp/: Cargo.toml
envelope/: Cargo.toml
fdn/: Cargo.toml
filter/: Cargo.toml
grains/: Cargo.toml
grains/src/: lib.rs
grains2/: Cargo.toml
lib/: Cargo.toml  cbindgen.toml  rust_dsp.h  rustdsp.h
lib/benches/: bench.rs  wave_bench.rs
lib/benches/delay_bench/: mod.rs
lib/benches/grain_bench/: mod.rs
lib/benches/interpolation_bench/: mod.rs
lib/benches/midi_input_bench/: mod.rs
lib/benches/noise_bench/: mod.rs
lib/benches/old_granular/: mod.rs
lib/benches/old_poly/: mod.rs
lib/benches/old_wavetables/: mod.rs
lib/benches/poly_bench/: mod.rs
lib/benches/wavetables_bench/: mod.rs
lib/src/: adsr.rs  buffer.rs  delay.rs  dsp.rs  envelope.rs  filter.rs  fold.rs  grains.rs  interpolation.rs  karplus.rs  lib.rs  midibitfield.rs  noise.rs  polytable.rs  reverb.rs  trig.rs  vector.rs  vector2D.rs  waveshape.rs  wavetable.rs
lib/src/bindings/: adsr.rs  biquad.rs  delay.rs  dsp.rs  env.rs  fold.rs  grains.rs  mod.rs  waveshape.rs  wavetable.rs
lib/src/filter/: mod.rs
lib/src/filter/biquad/: mod.rs
lib/src/filter/biquad/eightpole/: mod.rs
lib/src/filter/biquad/filterbank/: mod.rs
lib/src/filter/biquad/fourpole/: mod.rs
lib/src/filter/biquad/twopole/: mod.rs
lib/src/filter/comb/: mod.rs
lib/src/filter/onepole/: mod.rs
lib/src/filter/onezero/: mod.rs
lib/src/filter/svf/: mod.rs
lib/src/grains/: mod.rs
lib/src/grains/dynamic/: mod.rs
lib/src/grains/shared/: mod.rs
lib/src/grains/static_stereo/: mod.rs
lib/src/grains/stereo/: mod.rs
lib/src/interpolation/: mod.rs
lib/src/interpolation/cosine/: mod.rs
lib/src/interpolation/cubic/: mod.rs
lib/src/interpolation/floor/: mod.rs
lib/src/interpolation/hermite/: mod.rs
lib/src/interpolation/linear/: mod.rs
lib/src/noise/: mod.rs
lib/src/noise/brown/: mod.rs
lib/src/noise/expensive/: mod.rs
lib/src/noise/pink/: mod.rs
lib/src/noise/white/: mod.rs
lib/src/reverb/: mod.rs
lib/src/reverb/chowning/: mod.rs
lib/src/reverb/dattoro/: mod.rs
lib/src/reverb/freeverb/: mod.rs
lib/src/reverb/schroeder/: mod.rs
lib/src/reverb/vikverb/: mod.rs
lib/src/waveshape/: mod.rs
lib/src/waveshape/macros/: mod.rs
lib/src/waveshape/traits/: mod.rs
lib/src/wavetable/: mod.rs
lib/src/wavetable/arc/: mod.rs
lib/src/wavetable/owned/: mod.rs
lib/src/wavetable/shared/: mod.rs
playground/: Cargo.toml
playground/src/: main.rs
playground/src/io/: mod.rs
playground/src/plotter/: mod.rs
polytable/: Cargo.toml
polytable/src/: lib.rs
vector/: Cargo.toml
vector/src/: lib.rs
wavetable/: Cargo.toml
wavetable/src/: lib.rs
wavetable/tests/: integration_test.rs
(+22 files in other folders)
