[package]
name = "grains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
envelope = {path = "../envelope/"}
interpolation = {path = "../interpolation/"}
buffer = {path = "../buffer/"}
