[package]
name = "rust_dsp"
version = "0.1.14"
edition = "2021"

[dependencies]
rand = "0.8.5"
bitvec = "1.0.1"

[dev-dependencies]
criterion = { version = "0.5", features = [ "html_reports" ] }

[features]
default = ["std", "no_std"]
std = ["no_std"]
no_std=[]
c_bindings = []

[[bench]]
name = "bench" 
harness = false

[lib]
name = "rust_dsp"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]
