[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wavetable = {path = "../wavetable"}
interpolation = {path= "../interpolation"}
buffer = {path= "../buffer"}
waveshape = {path= "../waveshape"}
envelope = {path= "../envelope"}
reverb = {path= "../reverb"}
grains = {path= "../grains"}
trig = {path= "../trig"}
dsp = {path= "../dsp"}
delay = {path="../delay"}
cpal = "0.15.2"
anyhow = "1.0.79"
