[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
anyhow = "1.0.79"
rand = "0.8.5"
rust_dsp = { path = "../lib" }
mattias_osc = { path = "../../mattias_osc" }
