[package]
name = "polytable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpolation = {path = '../interpolation/'}
envelope = {path = '../envelope/'}
waveshape = {path = '../waveshape/'}
wavetable = {path = '../wavetable'}
vector = {path = '../vector'}
dsp = {path = '../dsp/'}
assert_float_eq = "1.1.3"
