[package]
name = "vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wavetable = {path = "../wavetable"}
waveshape = {path = "../waveshape"}
interpolation = {path = "../interpolation"}
dsp = {path = "../dsp"}
