[package]
name = "wavetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpolation = {path = '../interpolation/'}
buffer = {path = '../buffer/'}
waveshape = {path = '../waveshape/'}
dsp = {path = '../dsp/'}
